--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap");
+
+      body{
+          font-family: 'Anonymous Pro', monospace;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
