--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,9 @@
     -->
     <title>React App</title>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap");
-
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,600;0,700;0,800;1,100&display=swap');
       body{
-          font-family: 'Anonymous Pro', monospace;
+        font-family: 'Montserrat', sans-serif;
       }
     </style>
   </head>
